...
    tools:context="com.journalingapp.AddJournalActivity"
    android:fitsSystemWindows="true">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextJournalTitle"
        android:gravity="start"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/edit_journal_title"
        android:maxLines="1"
...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editTextJournalTitle"
        app:layout_constraintStart_toStartOf="@+id/editTextJournalTitle"
        app:layout_constraintTop_toBottomOf="@id/editTextJournalTitle"
        app:layout_constraintVertical_bias="1.0">
        <EditText
            android:id="@+id/editTextJournalBody"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start"
            android:textSize="16sp"
            android:hint="@string/edit_journal_body"
            android:inputType="textMultiLine"
...
