<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sign_up_scrollview">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="210dp"
                android:layout_gravity="center_horizontal"
                android:scaleType="centerCrop"
                android:layout_marginBottom="20dp"
                android:src="@drawable/pic"
                android:contentDescription="@string/sign_in_image_desc"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/sign_up_email"
                android:layout_marginTop="10dp"
                android:inputType="textEmailAddress"
                android:hint="@string/hint_email"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/sign_up_password"
                android:layout_marginTop="15dp"
                android:inputType="textPassword"
                android:hint="@string/hint_password"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_sign_up"
                android:layout_marginTop="15dp"
                android:text="@string/btn_sign_up"
                android:textColor="@android:color/white"
                android:background="@android:color/holo_blue_dark"
                android:textSize="18sp"/>

            <Button
                android:id="@+id/btn_reset_password2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:background="@null"
                android:text="@string/btn_forgot_password"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_link_for_sign_in"
                android:layout_marginTop="15dp"
                android:text="@string/btn_link_to_sign_in"
                android:textAllCaps="false"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="17sp"/>

            <ProgressBar
                android:id="@+id/progressBar_sign_up"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center|bottom"
                android:layout_marginBottom="20dp"
                android:visibility="gone" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>